--- a/.gitattributes
+++ b/.gitattributes
@@ -1,8 +1,2 @@
-*.c linguist-language=C
-*.h linguist-language=C
-*.C linguist-language=C
-*.H linguist-language=C
-HelloWorld.c linguist-language=C
-
-*.[cC] diff=sjis
-*.[hH] diff=sjis
+*.frm linguist-language=Visual Basic 6.0
+*.frm working-tree-encoding=UTF-8 eol=CRLF
